@@ -22,7 +22,30 @@ namespace ContractConfigurator.Behaviour
             // Load base class
             bool valid = base.Load(configNode);
 
-            valid &= ConfigNodeUtil.ParseValue<TriggeredBehaviour.State>(configNode, "onState", x => onState = x, this, TriggeredBehaviour.State.ParameterCompleted);
+            bool stateLoadValid = ConfigNodeUtil.ParseValue<TriggeredBehaviour.State>(configNode, "onState", x => onState = x, this, TriggeredBehaviour.State.PARAMETER_COMPLETED);
+            if (!stateLoadValid)
+            {
+                LoggingUtil.LogWarning(this, "Warning, values for onState have changed - attempting to load using obsolete values.");
+                valid &= ConfigNodeUtil.ParseValue<TriggeredBehaviour.LegacyState>(configNode, "onState", x =>
+                {
+                    switch (x)
+                    {
+                        case TriggeredBehaviour.LegacyState.ContractAccepted:
+                            onState = TriggeredBehaviour.State.CONTRACT_ACCEPTED;
+                            break;
+                        case TriggeredBehaviour.LegacyState.ContractCompletedFailure:
+                            onState = TriggeredBehaviour.State.CONTRACT_FAILED;
+                            break;
+                        case TriggeredBehaviour.LegacyState.ContractCompletedSuccess:
+                            onState = TriggeredBehaviour.State.CONTRACT_SUCCESS;
+                            break;
+                        case TriggeredBehaviour.LegacyState.ParameterCompleted:
+                            onState = TriggeredBehaviour.State.PARAMETER_COMPLETED;
+                            break;
+                    }
+                }, this);
+            }
+
             valid &= ConfigNodeUtil.ParseValue<bool?>(configNode, "owned", x => owned = x.Value, this, (bool?)true);
             valid &= ConfigNodeUtil.ParseValue<List<string>>(configNode, "vessel", x => vessels = x, this);
             valid &= ConfigNodeUtil.ParseValue<List<string>>(configNode, "parameter", x => parameter = x, this, new List<string>());
